# ticklytics

./: README.md  pyproject.toml  ticklytics.service
src/ticklytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ticklytics_pkg/: __init__.py  __main__.py  api.py  cache.py  cli.py  config.py  models.py
tests/: test_api.py  test_cache.py  test_cli.py
